code/python/BestExecutionAnalyticsforSmarterTradingBEAST/v4/docs/CostImpactV3.md
# CostImpactV3

The Cost Impact V3 object

## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**security_id** | **str** | Security Id | [optional] 
**country** | **str** | The two character ISO country code | [optional] 
**currency** | **str** | Currency | [optional] 
**strategy** | **str** | Strategy | [optional] 
**risk_aversion** | **float** | RiskAversion | [optional] 
**market_impact_status** | **str** | MarketImpactStatus | [optional] 
**message** | **str** | Message | [optional] 
**cost_per_share** | **float** | Cost Per Share | [optional] 
**cost_per_share_bps** | **float** | Cost Per Share Bps | [optional] 
**market_impact** | **float** | Market Impact | [optional] 
**confidence_interval** | **float** | Confidence Interval | [optional] 
**confidence_interval_bps** | **float** | Confidence Interval Bps | [optional] 
**liquidity_cost_per_share** | **float** | Liquidity Cost Per Share | [optional] 
**spread_cost_per_share** | **float** | Spread Cost Per Share | [optional] 
**liquidity_cost_per_share_bps** | **float** | Liquidity Cost Per Share Bps | [optional] 
**spread_cost_per_share_bps** | **float** | Spread Cost Per Share Bps | [optional] 
**output_strategy_bin_data_dto_list** | [**[OutputStrategyBinData]**](OutputStrategyBinData.md) | Output Strategy Bin Data List | [optional] 
**any string name** | **bool, date, datetime, dict, float, int, list, str, none_type** | any string name can be used but the value must be the correct type | [optional]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


